---------------------------------------------------------------------------
Version 5.5.2  [DEVEL] (rgerhards), 2009-11-??
- worked around an issue where omfile failed to compile on32 bit platforms
  under some circumstances (this smells like a gcc problem, but a simple
  solution was available). Thanks to Kenneth Marshall for some advice.
- extended testbench
- bugfix: hostname accidently set to IP address for some message sources,
  for example imudp. Thanks to Anton for reporting this bug. [imported v4]
- bugfix: ompgsql had problems with transaction support, what actually 
  rendered it unsuable. Thanks to forum user "horhe" for alerting me
  on this bug and helping to debug/fix it! [imported from 5.3.6]
- bugfix: $CreateDirs variable not properly initialized, default thus
  was random (but most often "on") [imported from v3]
---------------------------------------------------------------------------
Version 5.5.1  [DEVEL] (rgerhards), 2009-11-27
- introduced the ablity for netstream drivers to utilize an epoll interface
  This offers increased performance and removes the select() FDSET size
  limit from imtcp. Note that we fall back to select() if there is no
  epoll netstream drivers. So far, an epoll driver has only been
  implemented for plain tcp syslog, the rest will follow once the code
  proves well in practice AND there is demand.
- re-implemented $EscapeControlCharacterTab config directive
  Based on Jonathan Bond-Caron's patch for v4. This now also includes some
  automatted tests.
- bugfix: enabling GSSServer crashes rsyslog startup
  Thanks to Tomas Kubina for the patch [imgssapi]
- bugfix (kind of): check if TCP connection is still alive if using TLS
  Thanks to Jonathan Bond-Caron for the patch.
---------------------------------------------------------------------------
Version 5.5.0  [DEVEL] (rgerhards), 2009-11-18
- moved DNS resolution code out of imudp and into the backend processing